fix(elements/ino-markdown-editor): adjust list spacings (#1236)
* fix: removes parent spacing of first entry of next level

* increase vertical spacing of list entries

--- a/packages/elements/src/components/ino-markdown-editor/ino-markdown-editor.scss
+++ b/packages/elements/src/components/ino-markdown-editor/ino-markdown-editor.scss
@@ -203,12 +203,18 @@ ino-markdown-editor {
       list-style: none;
     }
 
-    :is(ul, ol)[data-type='taskList'] {
-      padding-left: 12px;
-
+    :is(ul, ol) {
       p {
         margin: 0;
       }
+
+      li {
+        margin: 2px 0;
+      }
+    }
+
+    :is(ul, ol)[data-type='taskList'] {
+      padding-left: 12px;
 
       li {
         display: flex;
